--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,12 +496,11 @@ nav ul li a {
 
 }
 
-/* .Lorem_img {
-
-    background-image: url(/assets/img/png/women_img.png);
+.Lorem_img {
+    background-image: url(/assets/img/png/section3_bg111.png);
     background-repeat: no-repeat;
     background-size: cover;
-} */
+}
 
 
 
